<resources>
    <string name="app_name">Week4_Homework</string>
    <string name="text_id">아이디</string>
    <string name="text_password">비밀번호</string>
    <string name="text_name">이름</string>
    <string name="text_id_hint">아이디를 입력하세요.</string>
    <string name="text_password_hint">비밀번호를 입력하세요.</string>
    <string name="text_name_hint">이름을 입력하세요.</string>
    <string name="text_login">로그인</string>
    <string name="text_join">회원가입</string>
    <string name="text_finish">종료</string>
    <string name="text_mbti">MBTI</string>
    <string name="text_hobby">취미</string>


</resources>