<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".HomeActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_id_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/text_id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_id_value_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/text_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id_home"
        app:layout_constraintStart_toEndOf="@id/tv_id_home"
        app:layout_constraintTop_toTopOf="@+id/tv_id_home" />

    <TextView
        android:id="@+id/tv_name_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/text_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_home" />

    <TextView
        android:id="@+id/tv_name_value_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_home"

        app:layout_constraintStart_toStartOf="@+id/tv_id_value_home"
        app:layout_constraintTop_toTopOf="@+id/tv_name_home" />


    <TextView
        android:id="@+id/tv_mbti_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/text_mbti"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_home" />

    <TextView
        android:id="@+id/tv_mbti_value_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_mbti"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mbti_home"
        app:layout_constraintStart_toStartOf="@+id/tv_id_value_home"
        app:layout_constraintTop_toTopOf="@+id/tv_mbti_home" />

    <TextView
        android:id="@+id/tv_hobby_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/text_hobby"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mbti_home" />

    <TextView
        android:id="@+id/tv_hobby_value_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hobby"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hobby_home"
        app:layout_constraintStart_toStartOf="@+id/tv_id_value_home"
        app:layout_constraintTop_toTopOf="@+id/tv_hobby_home" />


    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="120dp"
        android:text="@string/text_finish"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>